# depmirage

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
depmirage/: __init__.py  banner.py  cli.py  fixtures.json  parsers.py  registry.py  report.py  secrets.py  typosquat.py
examples/demo/: app.py  requirements.txt
tests/: test_banner.py  test_offline.py  test_parsers.py  test_secrets.py  test_typosquat.py
