[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "depmirage"
version = "0.1.0"
description = "Spot AI-hallucinated and slopsquatting Python dependencies, typosquats, and hardcoded secrets."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Atanas Burmov" }]
keywords = [
    "security", "supply-chain", "slopsquatting", "typosquatting",
    "hallucination", "pypi", "secrets", "pre-commit", "ci",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "requests>=2.25",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/AABurmov18/depmirage"
Repository = "https://github.com/AABurmov18/depmirage"
Issues = "https://github.com/AABurmov18/depmirage/issues"

[project.scripts]
depmirage = "depmirage.cli:main"

[tool.setuptools]
packages = ["depmirage"]

[tool.setuptools.package-data]
depmirage = ["fixtures.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
